tests/baselines/reference/jsFileCompilationPublicMethodSyntaxOfClass.errors.txt
error TS5055: Cannot write file 'tests/cases/compiler/a.js' which is one of the input files.
tests/cases/compiler/a.js(2,5): error TS8009: 'public' can only be used in a .ts file.


!!! error TS5055: Cannot write file 'tests/cases/compiler/a.js' which is one of the input files.
==== tests/cases/compiler/a.js (1 errors) ====
    class C {
        public foo() {
        ~~~~~~
!!! error TS8009: 'public' can only be used in a .ts file.
        }
    }